@@ -577,7 +577,7 @@ ModuleExport void UnregisterPSImage(void)
   bp=AppendHexVal(bp,Min(length,0xff)); \
 }
 
-static char* hexvals[] =
+static char* const hexvals[] =
   {
     "00","01","02","03","04","05","06","07","08","09","0A","0B",
     "0C","0D","0E","0F","10","11","12","13","14","15","16","17",
@@ -621,7 +621,7 @@ static inline char* AppendHexTriplet(char *q,
 static unsigned int WritePSImage(const ImageInfo *image_info,Image *image)
 {
   static const char
-    *PostscriptProlog[]=
+    const * const PostscriptProlog[]=
     {
       "%%BeginProlog",
       "%",
@@ -861,9 +861,9 @@ static unsigned int WritePSImage(const ImageInfo *image_info,Image *image)
       "  currentfile buffer readline pop",
       "  token pop /pointsize exch def pop",
       "  /Times-Roman findfont pointsize scalefont setfont",
-      (char *) NULL
+      (const char *) NULL
     },
-    *PostscriptEpilog[]=
+    * const PostscriptEpilog[]=
     {
       "  x y scale",
       "  currentfile buffer readline pop",
@@ -875,7 +875,7 @@ static unsigned int WritePSImage(const ImageInfo *image_info,Image *image)
       "  token pop /compression exch def pop",
       "  class 0 gt { PseudoClassImage } { DirectClassImage } ifelse",
       "  grestore",
-      (char *) NULL
+      (const char *) NULL
     };
 
   char
@@ -887,7 +887,7 @@ static unsigned int WritePSImage(const ImageInfo *image_info,Image *image)
     page_geometry[MaxTextExtent];
 
   const char
-    **q;
+    const * const *q;
 
   const ImageAttribute
     *attribute;
