@@ -38,6 +38,8 @@
 <p>2015-09-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/{ps.c, ps2.c, ps3.c}: Static string/array allocations are
+now more const.</li>
 <li>coders/palm.c: Palm static arrays should be 'const'.</li>
 <li>coders/meta.c (jpeg_embed): Stop sharing writeable static string
 'psheader'.
